--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=Product_service_11052024
-
-spring.jpa.hibernate.ddl-auto=update
+logging.level.org.springframework.web: Debug
+server.port=8081
+spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/product_service_may_24
 spring.datasource.username=product_service_may_24
 #spring.datasource.password=ThePassword
